tests/baselines/reference/unicodeExtendedEscapesInRegularExpressions19(target=es6).errors.txt
unicodeExtendedEscapesInRegularExpressions19.ts(1,13): error TS1125: Hexadecimal digit expected.


==== unicodeExtendedEscapesInRegularExpressions19.ts (1 errors) ====
    var x = /\u{}/gu;
                
!!! error TS1125: Hexadecimal digit expected.
    